--- a/css/styles.css
+++ b/css/styles.css
@@ -232,8 +232,9 @@ h2 {
   background-color: white;
   border-radius: 15px;
   height: 50px;
-  flex:1 0 30%;
+  flex:0 0 30%;
   outline: none;
+  margin: 10px;
 }
 
 
@@ -286,7 +287,7 @@ h2 {
 #colorGameReset {
   font-family: 'Roboto Slab', serif;
   margin: 0px auto;
-  width: 70px;
+  width: 100px;
   height: 30px;
   border-radius: 5px;
   font-size: 1em;
