--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ h2 {
 
 /*overlay for each div*/
 
-
+/*
 .overlay {
   position: relative;
 }
@@ -40,12 +40,12 @@ h2 {
 
 .overlay:hover:before{
   display: none;
-}
+}*/
 
 /*Starting overlay colors*/
 
 
-.overlayScramble:before{
+/*.overlayScramble:before{
   background-color: rgba(255,0,0,0.5);
 }
 .overlayUnScramble:before{
@@ -56,7 +56,7 @@ h2 {
 }
 .overlayCyoa:before {
   background-color: rgba(0,0,255,0.5);
-}
+}*/
 
 .gameBox {
   border-radius: 15px;
@@ -218,7 +218,7 @@ h2 {
   border-radius: 360px;
   background-color: white;
   border: 1px solid black;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
 
