styled unscramble game

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,19 +125,21 @@ h2 {
   display: flex;
   flex-flow: column;
   align-items: center;
+  background-image: url('http://bgfons.com/uploads/paper/paper_texture6030.jpg');
+  background-size: cover;
+  background-position: right bottom;
 }
 
 #unScrambleBox h2 {
   margin-top: 60px;
   width: 100%;
   text-align: center;
+  text-shadow: 1px 1px lightgrey;
 }
 
 #startButton {
   font-family: 'Roboto Slab', serif;
   margin: 40px auto;
-  width: 100px;
-  height: 30px;
   border-radius: 5px;
   font-size: 1em;
 }
@@ -147,17 +149,20 @@ h2 {
   font-size: 2em;
   text-align: center;
   outline: none;
+  background-color: transparent;
+  border: 1px solid grey;
 }
 
 #score {
   padding-left: 20px;
   align-self: flex-start;
   float: left;
+  text-shadow: 1px 1px lightgrey;
 }
 
 #resetUnScramble {
   font-family: 'Roboto Slab', serif;
-  margin: 40px auto;
+  margin: 30px auto;
   width: 70px;
   height: 30px;
   border-radius: 5px;
@@ -167,6 +172,7 @@ h2 {
 #scoreboard {
   width: 100%;
   margin: 0 auto;
+  text-shadow: 1px 1px lightgrey;
 }
 
 #scoreboard h3 {
@@ -179,6 +185,10 @@ h2 {
 
 #scramWord {
   margin-top: 40px;
+  font-size: 3rem;
+  font-family: Helvetica;
+  text-shadow: 1px 1px grey;
+  color: black;
 }
 
 #unscrambleButton {
@@ -192,10 +202,28 @@ h2 {
 
 #gOver {
   margin-top: 120px;
+  font-family: Impact;
+  font-size: 5rem;
+  text-shadow: 1px 1px grey;
 }
 
 #gJob {
   margin-top: 120px;
+  font-size: 4rem;
+  font-family: 'Futura';
+  text-shadow: 1px 1px grey;
+}
+
+#startButton, #unscrambleButton, #resetUnScramble {
+  background-color: white;
+  border-radius: 40px;
+  border:none;
+  text-align: center;
+  box-shadow: 1px 1px grey;
+  text-shadow: .5px .5px grey;
+  width: 100px;
+  height: 35px;
+  outline: none;
 }
 
 /**UNSCRAMBLE BOX STYLES******END*********/
