styles for colorBox

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ h2 {
 
 /*overlay for each div*/
 
-/*
+
 .overlay {
   position: relative;
 }
@@ -40,12 +40,12 @@ h2 {
 
 .overlay:hover:before{
   display: none;
-}*/
+}
 
 /*Starting overlay colors*/
 
 
-/*.overlayScramble:before{
+.overlayScramble:before{
   background-color: rgba(255,0,0,0.5);
 }
 .overlayUnScramble:before{
@@ -56,7 +56,7 @@ h2 {
 }
 .overlayCyoa:before {
   background-color: rgba(0,0,255,0.5);
-}*/
+}
 
 .gameBox {
   border-radius: 15px;
@@ -200,6 +200,38 @@ h2 {
 
 /**UNSCRAMBLE BOX STYLES******END*********/
 
+/** Color Randomizer STYLES*****START******/
+
+#colRanTitle {
+  text-align: center;
+}
+
+#colRanDir {
+  text-align: center;
+}
+
+#colRanPrint{
+font-size: 1.2em;
+font-family: 'Roboto Slab' , serif;
+position: relative;
+text-align: center;
+top: 250px;
+color: white
+}
+
+#trog {
+  height: 350px;
+  margin-top: 0px;
+
+}
+
+
+
+
+
+
+
+/** Color Randomizer STYLES*****END******/
 
 //**ColorGame STYLES******START*********/
 
@@ -226,16 +258,16 @@ h2 {
     display: flex;
     flex-flow: wrap;
     justify-content: center;
-    margin: 20px 50px 0px 50px;
+    margin: 0px 50px 0px 50px;
 }
 
 .guessButton {
   background-color: white;
   border-radius: 15px;
-  height: 50px;
+  height: 70px;
   flex:0 0 30%;
   outline: none;
-  margin: 10px;
+  margin: 5px;
 }
 
 
@@ -243,7 +275,7 @@ h2 {
   background-color: white;
   border-radius: 15px;
   font-family: 'Roboto Slab', serif;
-  margin: 10px auto 0px auto;
+  margin: 0px auto 0px auto;
   width: 70px;
   height: 30px;
   font-size: 1em;
@@ -291,6 +323,14 @@ h2 {
   width: 100px;
   height: 30px;
   border-radius: 5px;
+}
+
+#colorGameDir {
+  width: 70%;
+  font-size: 1.1em;
+  font-family: 'Roboto Slab', serif;
+  margin: 0 auto;
+  text-align: center;
 }
 
 /**colorGame STYLES******END*********/
