--- a/css/styles.css
+++ b/css/styles.css
@@ -307,6 +307,7 @@ h2 {
   font-size: 1em;
   min-height: 400px;
   height: auto;
+  background: linear-gradient(to bottom, rgba(253,255,255,1) -1%,rgba(225,255,255,1) 0%,rgba(253,255,255,1) 0%,rgba(225,255,255,1) 2%,rgba(225,255,255,1) 3%,rgba(225,255,255,1) 12%,rgba(230,248,253,1) 30%,rgba(200,238,251,1) 54%,rgba(190,228,248,1) 75%,rgba(177,216,245,1) 100%);
 }
 
 #beginButton {
@@ -316,6 +317,17 @@ h2 {
   height: 30px;
   border-radius: 5px;
   font-size: 1em;
+}
+
+#cyoaError {
+  color: red;
+  font-weight: bolder;
+}
+
+#cyoaRoomsAvail {
+  color: rgba(63,76,107,1);
+  font-family: monospace;
+  font-weight: lighter;
 }
 
 .cyoaP {
