--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
 body {
   margin: 0 5%;
-  background: #333;
+  background: ##e8f1f8;
+  background-image: url("../images/zenbg-1.png"), url("zenbg-2.png");
+  background-repeat: repeat-y, repeat;
 }
 
 .headerLogo {
-  color: white;
+  color: black;
   text-align: right;
+  font-family: 'Cairo', sans-serif;
 }
 
 h2 {
@@ -16,6 +19,7 @@ h2 {
   margin: 0 10%;
   display: flex;
   flex-flow: wrap;
+  margin-bottom: 10%;
 }
 
 
@@ -65,7 +69,6 @@ h2 {
   margin: 10px;
   height: 400px;
   width: auto;
-  border: 3px solid black;
   flex: 1 0 45%;
 }
 
@@ -77,6 +80,7 @@ h2 {
   flex-flow: column;
   justify-content: flex-start;
   position: relative;
+  margin-bottom: 20px;
 }
 
 #scramButton {
