--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,9 @@ h2 {
 .overlayUnScramble:before{
   background-color: rgba(0,255,0,0.5);
 }
+.overlayRandomizer:before {
+  background-color: rgba(255,0,255,0.5);
+}
 .overlayColorGame:before {
   background-color: rgba(0,255,255,0.5);
 }
@@ -81,6 +84,8 @@ h2 {
   justify-content: flex-start;
   position: relative;
   margin-bottom: 20px;
+  background-image: url("../images/scramble_bg.jpg");
+  background-position: center;
 }
 
 #scramButton {
@@ -103,6 +108,8 @@ h2 {
 }
 
 #scramInput {
+  border-radius: 10px;
+  height: 50px;
   width: 55%;
   margin: 90px auto;
   font-size: 1.8em;
@@ -113,12 +120,15 @@ h2 {
 }
 
 #scramOutput {
-  width: 50%;
+  border-radius: 10px;
+  height: 50px;
+  width: 55%;
   margin: 90px auto;
-  font-size: 2em;
+  font-size: 1.8em;
   border: none;
   border-bottom: 2px solid rgba(250, 250, 250, 1);
   text-align: center;
+  outline: none;
 }
 
 
@@ -251,10 +261,14 @@ top: 250px;
 color: white
 }
 
-#trog {
-  height: 350px;
-  margin-top: 0px;
+#trogPop{
+  display: flex;
+  justify-content: center;
+}
 
+#trog {
+  height: 300px;
+  margin-top: 0px;
 }
 
 
